# pdm-demo

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  routes.py
routes/: __init__.py
routes/name/: __init__.py
routes/name.{first_name}/: route.py
routes/root/: __init__.py  route.py
routes/user/: __init__.py  route.py
server/: __init__.py
