[project]
name = "pdm-demo"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Jonathon Tech", email = "jgt.tech@protonmail.com"},
]
dependencies = [
    "uvicorn>=0.25.0",
    "fastapi>=0.108.0",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "License-LICENSE"}


[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller>=6.3.0",
]

[tool.pdm.scripts]
start = "uvicorn server:api --reload"
build = "pyinstaller main.py --clean --onefile --name das"
clean = "rm -rfv build dist das.spec"
